--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Balógun's AI Blog!
-description: This is where I post my journey in AI, using the fasta course. Happy Following... ❤
+description: This is where I post my journey in AI, using the fastai course. Happy Following... ❤
 github_username: balogunofafrica
 
 # Email and twitter are optional:
